# youtube-downloader

./: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  converter.rs  downloader.rs  error_wrapper.rs  main.rs
src/Pages/Home/: Home.tsx
src/commands/: downloadVideo.ts
src/components/Icon/: Icon.tsx
src/components/Inputs/: Button.tsx  SelectionInput.tsx  TextInput.tsx
src/components/Queue/: Queue.tsx
src/components/TitleBar/: TitleBar.tsx
src/components/ui/BackgroundBeams/: BackgroundBeams.tsx
src/components/ui/BackgroundGradient/: BackgroundGradient.tsx
src/components/ui/TextGenerateEffect/: TextGenerateEffect.tsx
