[package]
name = "youtube-downloader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version = "1.36.0", features = ["full"] }
window-shadows = "0.2.2"
window-vibrancy = "0.4.0"
rustube = "0.6.0"
config = "0.11.0"
dirs = "5.0.1"
reqwest = {version ="0.11",features = ["blocking"] }
pin-utils = "0.1.0"
tokio-stream = {version = "0.1.14", features = ["full"] }
 
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
